--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI = mongodb+srv://jagadeeshp200_db_user:o49S523DGYKKzi2S@mern-assingment-users.khhzbur.mongodb.net/
+MONGO_URI = ""
 PORT = 5000
